--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
     <script type="text/javascript" src="./js/libs/jquerymobile1.4.5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/jquerymobile1.4.5.min.css">
     <script type="text/javascript" src="./js/libs/crypto.sha1.js"></script>
-    <script type="text/javascript" src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="http://18.221.205.124:8000/socket.io/socket.io.js"></script>
     <!-- Nel Add -->
 </body>
 </html>
